# vk_copy_post_bot

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
docker/: export.sh  lint.sh  lint_check.sh  scheduler.sh  start.sh
src/: config.py  error_reporting.py
src/filters/: admin.py
src/handlers/: admin.py  echo.py
src/middlewares/: environment.py
src/redis_client/: client.py
src/services/: admin_services.py  exceptions.py
src/states/: user_post.py
src/vk_api_client/: api_client.py  exceptions.py  models.py  services.py
src/worker/: __init__.py  celery.py  tasks.py
